2011-12-14  Kaz Kylheku  <kaz@kylheku.com>

	* genman.txr: Fix empty NAME section.

2011-12-14  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (minus): Allow difference between characters.

2011-12-14  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (plus, minus, gt, lt, ge, le): Handle character operands.

	* eval.c (eval_init): New functions interned.

	* lib.c (num_chr, chr_num): New functions.

	* lib.h (num_chr, chr_num): Declared.

	* txr.1: Documentation stubs.

2011-12-13  Kaz Kylheku  <kaz@kylheku.com>

	Version 048

	* txr.c (version): Bumped.

	* txr.1: Bumped version and set date.

	* configure (txr_ver): Bumped.

	* RELNOTES: Updated.

2011-12-13  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (exptmod, gcd): New functions.

	* eval.c (eval_init): New functions registered as intrisics.

	* lib.h (exptmod, gcd): Declared.

	* txr.1: Documentation stubs added.

2011-12-13  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (evenp, oddp): New functions.

	* eval.c (eval_init): New functions registered as intrinsics.

	* lib.h (evenp, oddp): Declared.

	* txr.1: Documentation stub updated.

2011-12-13  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (highest_bit): Linkage changed to static.
	(abso, isqrt): New functions.
	(isqrt_fixnum): New static function.

	* eval.c (eval_init): Registered abs, sqrt and numberp instrinsics.

	* lib.c (numberp): New function.

	* lib.h (numberp, abso, isqrt): Declared.

	* mpi-patches/series: New patch added.

	* mpi-patches/faster-square-root: New patch added.

	* txr.1: Documentation stubs for new functions.

2011-12-13  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (expt): Fix broken bignum x fixnum combination.

2011-12-13  Kaz Kylheku  <kaz@kylheku.com>

	* Makefile (repatch): New phony target.
	(distclean): Remove mpi directory.

2011-12-13  Kaz Kylheku  <kaz@kylheku.com>

	Patch to shrink mpi-int to three words on 32 bit platforms,
	so that obj_t stays four pointers wide.

	* mpi-patches/series: New patch added.
