@@ -1,5 +1,11 @@
 2011-12-14  Kaz Kylheku  <kaz@kylheku.com>
 
+	* eval.c (op_dohash): Esbatlish anonymous block.
+
+	* txr.1: Finished documenting special operators.
+
+2011-12-14  Kaz Kylheku  <kaz@kylheku.com>
+
 	* genman.txr: Fix empty NAME section.
 
 2011-12-14  Kaz Kylheku  <kaz@kylheku.com>
